// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply collapsed styles 1`] = `
<div>
  <div
    class="sidebar sidebar--collapsed  mko_vrt9r1-sidebar  mko_vrt9r1-sidebar_collapsed"
  >
    <button
      aria-label="Toggle sidebar"
      class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon sidebar__toggler  mko_vrt9r1-sidebar__toggler"
      icon="›︎"
      type="button"
    />
    <ul
      class="sidebar__menu  mko_vrt9r1-sidebar__menu"
    >
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="One"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            A
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            One
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Two"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            B
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Two
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Three"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            C
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Three
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should apply hidden styles 1`] = `
<div>
  <div
    class="sidebar sidebar--hidden  mko_vrt9r1-sidebar  mko_vrt9r1-sidebar_hidden"
  >
    <button
      aria-label="Toggle sidebar"
      class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon sidebar__toggler  mko_vrt9r1-sidebar__toggler"
      icon="‹︎"
      type="button"
    />
    <ul
      class="sidebar__menu  mko_vrt9r1-sidebar__menu"
    >
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="One"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            A
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            One
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Two"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            B
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Two
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Three"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            C
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Three
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="sidebar  mko_vrt9r1-sidebar"
  >
    <button
      aria-label="Toggle sidebar"
      class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon sidebar__toggler  mko_vrt9r1-sidebar__toggler"
      icon="‹︎"
      type="button"
    />
    <ul
      class="sidebar__menu  mko_vrt9r1-sidebar__menu"
    >
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="One"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            A
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            One
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Two"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            B
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Two
          </div>
        </a>
      </li>
      <li
        class="sidebar__item  mko_vrt9r1-sidebar__item"
        title="Three"
      >
        <a
          class="sidebar-link"
          href="fake/link"
        >
          <div
            class="sidebar-link__icon  mko_vrt9r1-sidebarLink__icon"
          >
            C
          </div>
          <div
            class="sidebar-link__text  mko_vrt9r1-sidebarLink__text"
          >
            Three
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
